# FileVault

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  LocalVault_Technical_Implementation_Guide.ORIGINAL.md  LocalVault_Technical_Implementation_Guide.md  README.md  vcpkg.json
.github/workflows/: build-test.yml
benchmarks/: CMakeLists.txt  generate_dataset.py  m5_profile_a.cpp  run_m5_profile_a.py
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/implementation-logs/M0/: 2026-07-10-claude-code-repository-scaffold.md  2026-07-12-verifier-repository-scaffold.md
docs/implementation-logs/M1/: 2026-07-12-codex-database-repository-lifecycle.md  2026-07-12-verifier-database-repository-lifecycle.md
docs/implementation-logs/M2/: 2026-07-13-codex-whole-file-snapshot-restore.md  2026-07-13-verifier-whole-file-snapshot-restore.md
docs/implementation-logs/M3/: 2026-07-13-codex-chunking-blake3-zstd.md  2026-07-13-verifier-chunking-blake3-zstd.md
docs/implementation-logs/M4/: 2026-07-13-codex-crash-safe-publication.md  2026-07-13-verifier-crash-safe-publication.md
docs/implementation-logs/M5/: implementation.md  verification.md
docs/implementation-logs/M5/briefs/: A-bounded-queue.md  B-ignore-rules.md  C-pipeline.md  D-scanner-platform.md  E-races-instability.md  F-progress.md  G-acceptance.md
include/localvault/: error.hpp  failure_injector.hpp  progress.hpp  repository.hpp  restore_engine.hpp  snapshot_engine.hpp  types.hpp  version.hpp.in
scripts/: check-format.sh  format.sh
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.cpp  repository.cpp  restore_engine.cpp  snapshot_engine.cpp
src/core/concurrency/: bounded_queue.hpp
src/core/database/: database.cpp  database.hpp  metadata_store.cpp  metadata_store.hpp  migrations.cpp  migrations.hpp  statement.cpp  statement.hpp  transaction.cpp  transaction.hpp
src/core/filesystem/: creation_ledger.hpp  file_scanner.cpp  file_scanner.hpp  filesystem_classifier.cpp  filesystem_classifier.hpp  ignore_rules.cpp  ignore_rules.hpp
src/core/filesystem/platform/: file_metadata.hpp  path_safety.hpp  platform_lock.hpp  posix_file_metadata.cpp  posix_lock.cpp  posix_path_safety.cpp  posix_repository_support.cpp  repository_support.hpp  win32_file_metadata.cpp  win32_lock.cpp  win32_path_safety.cpp  win32_repository_support.cpp
src/core/storage/: blake3_hasher.cpp  blake3_hasher.hpp  chunker.cpp  chunker.hpp  object_store.cpp  object_store.hpp  zstd_codec.cpp  zstd_codec.hpp
src/desktop/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
tests/: CMakeLists.txt
tests/integration/: lock_contention_test.cpp  m3_large_file_roundtrip_test.cpp  m4_crash_safety_test.cpp  m5_pipeline_test.cpp  repository_test.cpp  restore_engine_test.cpp  snapshot_engine_test.cpp  snapshot_restore_acceptance_test.cpp
tests/support/: localvault_m4_crash_helper.cpp  localvault_m4_recovery_probe.cpp  lock_contention_helper.cpp  repository_probe.cpp  test_filesystem.cpp  test_filesystem.hpp
tests/unit/: blake3_hasher_test.cpp  bounded_queue_test.cpp  chunker_test.cpp  database_test.cpp  file_scanner_test.cpp  filesystem_classifier_test.cpp  ignore_rules_test.cpp  metadata_store_test.cpp  migrations_test.cpp  object_store_test.cpp  test_filesystem_support_test.cpp  version_test.cpp  zstd_codec_test.cpp
